--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Öffnet unerwünschte Tabs oder Fenster",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Webseite als »NSFW« kennzeichnen (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">»Unpassend für den Arbeitsplatz«</a>)",
     "description": "A checkbox to use for NSFW sites"
