--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Kéretlen lapokat vagy ablakokat nyit meg",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "A weboldal megjelölése felnőtt tartalomként",
     "description": "A checkbox to use for NSFW sites"
