--- a/src/_locales/lv/messages.json
+++ b/src/_locales/lv/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Atver nevēlamas cilnes vai logus",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Iezīmēt tīmekļa lapu kā \"NSFW\" (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">\"Not Safe for Work</a> (nav droša darbam))",
     "description": "A checkbox to use for NSFW sites"
