--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Відкриває небажані вкладки або вікна",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Позначити цю сторінку «NSFW» (<a href=\"https://uk.wikipedia.org/wiki/NSFW\">«Небезпечно для роботи»</a>)",
     "description": "A checkbox to use for NSFW sites"
