--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Отваря нежелани раздели или прозорци",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Маркиране на уеб страницата като &ldquo;NSFW&rdquo; (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">&ldquo;не е безопасна за работа&rdquo;</a>)",
     "description": "A checkbox to use for NSFW sites"
