--- a/src/_locales/da/messages.json
+++ b/src/_locales/da/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Åbner uønskede faner eller vinduer",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Markér websiden som &ldquo;NSFW&rdquo; (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">&ldquo;Ikke sikker til arbejdsbrug&rdquo;</a>)",
     "description": "A checkbox to use for NSFW sites"
