--- a/src/_locales/et/messages.json
+++ b/src/_locales/et/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Avab soovimatuid kaarte või aknaid",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Sildista veebileht kui „NSFW“ (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">&ldquo;tööks sobimatu&rdquo;</a>)",
     "description": "A checkbox to use for NSFW sites"
