--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1011,6 +1011,10 @@
     "message": "ouvre des onglets ou fenêtres indésirables",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Marquer le site Web en tant que \"NSFW\" (<a href=\"https://fr.wikipedia.org/wiki/Not_safe_for_work\">\"Not Safe For Work\", c'est-à-dire pour public averti/inapproprié au travail</a>)",
     "description": "A checkbox to use for NSFW sites"
