--- a/src/_locales/gl/messages.json
+++ b/src/_locales/gl/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Abre ventás ou páxinas non desexadas",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Etiqueta a páxina como \"NSFW\" (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">\"Non é Segura No Traballo\"</a>)",
     "description": "A checkbox to use for NSFW sites"
