--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -1011,6 +1011,10 @@
     "message": "Otwiera niepożądane karty lub okna",
     "description": "An entry in the widget used to select the type of issue"
   },
+  "supportS6Select1Option7": {
+    "message": "Leads to badware, phishing",
+    "description": "An entry in the widget used to select the type of issue"
+  },
   "supportS6Checkbox1": {
     "message": "Oznacz stronę internetową jako „NSFW” (<a href=\"https://wikipedia.org/wiki/Not_safe_for_work\">„Not Safe For Work (nieodpowiednią w pracy)”</a>)",
     "description": "A checkbox to use for NSFW sites"
