--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -1012,7 +1012,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Leads to badware, phishing",
+    "message": "बैडवेयर, फ़िशिंग की ओर ले जाता है",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
