--- a/src/_locales/lv/messages.json
+++ b/src/_locales/lv/messages.json
@@ -1012,7 +1012,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Leads to badware, phishing",
+    "message": "Noved pie slitkas programmatūras, pikšķerēšanas",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
