Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -128,7 +128,7 @@
     "description": "Tooltip used for the logger icon in the panel"
   },
   "popupTipReport": {
-    "message": "Laporkan masalah situs web ini",
+    "message": "Laporkan masalah di situs web ini",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipNoPopups": {
@@ -536,7 +536,7 @@
     "description": "used as a tooltip for error icon beside a list"
   },
   "1pTrustWarning": {
-    "message": "Jangan tambah filter dari sumber yang tidak tepercaya.",
+    "message": "Jangan tambah filter dari sumber yang tidak terpercaya.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
@@ -1012,7 +1012,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Leads to badware, phishing",
+    "message": "Mengarah ke perangkat lunak jahat, phishing",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
