--- a/platform/mv3/extension/_locales/el/messages.json
+++ b/platform/mv3/extension/_locales/el/messages.json
@@ -148,7 +148,7 @@
     "description": "A short description for the editable field which lists trusted sites"
   },
   "noFilteringModePlaceholder": {
-    "message": "[hostnames only]\nexample.com\ngames.example\n...",
+    "message": "[μόνο ονόματα κεντρικών υπολογιστών]\nexample.com\ngames.example\n...",
     "description": "Default text for in edit field"
   },
   "behaviorSectionLabel": {
