Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/cy/messages.json
+++ b/platform/mv3/extension/_locales/cy/messages.json
@@ -12,7 +12,7 @@
     "description": "Appears aside each filter list in the _3rd-party filters_ pane"
   },
   "dashboardName": {
-    "message": "uBO Lite — Dashfwrdd",
+    "message": "uBO Lite — Dangosfwrdd",
     "description": "English: uBO Lite — Dashboard"
   },
   "settingsPageName": {
