--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1012,7 +1012,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Conduit à/Redirige vers des logiciels malveillants, du hameçonnage...",
+    "message": "conduit à/redirige vers des logiciels malveillants, du hameçonnage",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
